fix alignment svg

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,6 +365,7 @@ h4 {
   font-size: 1.4rem !important;
   font-weight: 700;
   padding-bottom: 50px;
+  margin-bottom: 0;
 }
 
 /* **************************************
